--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -18,10 +18,11 @@ requirements:
   build:
     - python                                 # [build_platform != target_platform]
     - cross-python_{{ target_platform }}     # [build_platform != target_platform]
+    - maturin >=0.14,<0.15                   # [build_platform != target_platform]
     - {{ compiler('rust') }}
     - {{ compiler('c') }}
   host:
-    - maturin
+    - maturin >=0.14,<0.15
     - pip
     - python
     - toml
