restore license line

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -45,10 +45,12 @@ about:
   home: https://github.com/oconnor663/blake3-py
   summary: Python bindings for the Rust blake3 crate
   description: |
-    BLAKE3 is a cryptographic hash function that is much faster than MD5, SHA-1, SHA-2, SHA-3, and BLAKE2.
+    BLAKE3 is a cryptographic hash function that claims to be much faster than MD5, SHA-1, SHA-2,
+    SHA-3, and BLAKE2.
 
     This conda package is the Python bindings for the Rust blake3 crate. If you are looking for the
     reference implementation of BLAKE3 as a command line tool, see the b3sum conda package instead.
+  license: Apache-2.0
   license_file:
     - LICENSE
     - THIRDPARTY.yml
